--- a/main/style.css
+++ b/main/style.css
@@ -33,122 +33,205 @@ body {
 }
 
 nav {
-    background: #ff9933;
-    height: 90px;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-  }
-  label.logo {
-    color: black;
-    font-weight: bold;
-    font-size: 45px;
-    text-shadow: 1px 1px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
-  }
-  nav ul {
-    float: right;
-    margin-right: 20px;
-  }
-  nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-  }
-  nav ul li a {
-    color: black;
-    font-weight: bold;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  a.active,
-  a:hover {
-    background: #00cc00;
-    transition: .5s;
-  }
-  .checkbtn {
-    font-size: 22px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 30px;
-    cursor: pointer;
-    display: none;
-  }
-  #check {
-    display: none;
-  }
-  @media (max-width: 1050px) {
-    label.logo {
-      padding-left: 30px;
-    }
-    nav ul li a {
-      font-size: 16px;
-    }
-  }
-  /* Responsive media query code for small screen */
-  @media (max-width: 890px) {
-    .checkbtn {
-      display: block;
-    }
-    label.logo {
-      font-size: 22px;
-    }
-    ul {
-      position: fixed;
-      width: 100%;
-      height: 100vh;
-      background: #ff9933;
-      top: 80px;
-      left: -100%;
-      text-align: center;
-      transition: all .5s;
-    }
-    nav ul li {
-      display: block;
-      margin: 50px 0;
-      line-height: 30px;
-    }
-    nav ul li a {
-      font-size: 20px;
-    }
-    a:hover,
-    a.active {
-      background: none;
-      color: #00cc00;
-    }
-    #check:checked~ul {
-      left: 0;
-    }
-  }
-  
-  .home-page, 
-  .about-page,
-  .donations-page,
-  .contact-page {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      min-height: 100vh;
-      /* Use min-height to ensure content takes up full viewport height */
-      background-color: #000;
-  }
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+  background: #ff9933;
+  height: 90px;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
 }
 
-  #home-header {
-    color: white;
-    font-weight: bolder;
-    font-size: 2em;
+label.logo {
+  color: black;
+  font-weight: bold;
+  font-size: 45px;
+  text-shadow: 1px 1px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+
+nav ul {
+  float: right;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: black;
+  font-weight: bold;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+a.active,
+a:hover {
+  background: #00cc00;
+  transition: .5s;
+}
+
+.checkbtn {
+  font-size: 22px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+
+@media (max-width: 1050px) {
+  label.logo {
+    padding-left: 30px;
   }
+
+  nav ul li a {
+    font-size: 16px;
+  }
+}
+
+/* Responsive media query code for small screen */
+@media (max-width: 890px) {
+  .checkbtn {
+    display: block;
+  }
+
+  label.logo {
+    font-size: 22px;
+  }
+
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #ff9933;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: 20px;
+  }
+
+  a:hover,
+  a.active {
+    background: none;
+    color: #00cc00;
+  }
+
+  #check:checked~ul {
+    left: 0;
+  }
+}
+
+.home-page,
+.about-page,
+.donations-page,
+.contact-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
+  /* Use min-height to ensure content takes up full viewport height */
+  background-color: #000;
+}
+
+.grid-container-home,
+.grid-container-about {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  padding: 10px;
+}
+
+#home-header {
+  color: white;
+  font-weight: bolder;
+  font-size: 3em;
+}
+
+#about-header {
+  color: white;
+  font-weight: bolder;
+  font-size: 2em;
+}
+
+.about-images {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Image Sizing Consistency */
+.about-images {
+  width: 100%;
+  height: auto;
+}
+
+.mySlides {
+  display: none; /* Hide all slides by default */
+}
+
+/* Dots Styling */
+.dot {
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  margin: 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Position the dots */
+.slideshow-container {
+  position: relative;
+  max-width: 300px;
+  margin: auto;
+}
+
+.slideshow-container .dot {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  user-select: none;
+}
