--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 nav {
-  background: #ff9933;
+  background: #00cc00;
   height: 90px;
   width: 100%;
   position: fixed;
@@ -75,7 +75,7 @@ nav ul li a {
 
 a.active,
 a:hover {
-  background: #00cc00;
+  background: #ff9933;
   transition: .5s;
 }
 
@@ -117,7 +117,7 @@ a:hover {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #ff9933;
+    background: #00cc00;
     top: 80px;
     left: -100%;
     text-align: center;
@@ -137,7 +137,7 @@ a:hover {
   a:hover,
   a.active {
     background: none;
-    color: #00cc00;
+    color: #ff9933;
   }
 
   #check:checked~ul {
@@ -179,14 +179,14 @@ a:hover {
 }
 
 #home-header {
-  color: #ff9933;
+  color: #00cc00;
   font-weight: bolder;
   font-size: 4em;
   text-align: left;
 }
 
 #home-second-header {
-  color: #ff9933;
+  color: #00cc00;
   font-weight: 200;
   font-size: 2em;
   padding-top: 5%;
@@ -203,7 +203,7 @@ a:hover {
 }
 
 #about-header {
-  color: #ff9933;
+  color: #00cc00;
   font-weight: bolder;
   font-size: 3em;
   text-align: center;
@@ -267,7 +267,7 @@ a:hover {
 
 .prev:hover,
 .next:hover {
-  background-color: #ff9933;
+  background-color: #00cc00;
 }
 
 /* Fix for sections being too wide */
@@ -301,34 +301,34 @@ section {
   font-size: 22px;
   font-weight: normal;
   font-family: Arial, sans-serif;
-  color: #ff9933;
+  color: #00cc00;
   padding: 20px;
 }
 
 #donations-header {
   font-size: 4em;
   text-align: center;
-  color: #ff9933;
+  color: #00cc00;
 }
 
 #donations-second-header {
   font-size: 2em;
   text-align: center;
-  color: #ff9933;
+  color: #00cc00;
   padding-top: 60px;
 }
 
 .donations-third-header{
   font-size: 1.8em;
   text-align: center;
-  color: #ff9933;
+  color: #00cc00;
   padding-top: 40px;
 }
 
 .contact-text {
   text-align: center;
   padding: 20px;
-  color: #ff9933;
+  color: #00cc00;
   font-weight: bolder;
   font-style: italic;
 }
@@ -336,7 +336,7 @@ section {
 #contact-header {
   text-align: center;
   padding: 20px;
-  color: #ff9933;
+  color: #00cc00;
   font-size: 2em;
 }
 
